gcc/testsuite/rust/rustc/ui/parser/macro-bad-delimiter-ident.rs
fn main() {
    foo! bar < // { dg-error "" "" { target *-*-* } }
}

